--- a/.github/workflows/k8s_deployment.yml
+++ b/.github/workflows/k8s_deployment.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ secrets.Access_key }}
-        aws-secret-access-key: ${{ secrets.Secret_access_key }}
+        aws-access-key-id: ${{ secrets.ACCESS_KEY }}
+        aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
         aws-region: us-west-2
 
     - name: Login to Amazon ECR
